# fbxcel-legacy

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs
src/loader/: mod.rs
src/loader/binary/: mod.rs
src/loader/binary/simple/: error.rs  generic.rs  mod.rs
src/loader/binary/simple/fbx7400/: connections.rs  definitions.rs  fbx_header_extension.rs  global_settings.rs  mod.rs  objects.rs  properties70.rs  takes.rs
src/loader/binary/simple/fbx7400/objects/: animation_curve_node.rs  animation_layer.rs  animation_stack.rs  blend_shape.rs  blend_shape_channel.rs  cluster.rs  deformer.rs  display_layer.rs  material.rs  mod.rs  model.rs  node_attribute.rs  null.rs  pose.rs  shape.rs  skeleton.rs  skin.rs  texture.rs  video.rs
src/loader/enums/: mod.rs
src/loader/enums/fbx7400/: deformer.rs  geometry.rs  mod.rs  texture.rs
src/loader/utils/: mod.rs
src/parser/: mod.rs
src/parser/binary/: error.rs  event.rs  mod.rs  reader.rs
src/parser/binary/event/: attribute.rs  mod.rs
src/parser/binary/event/attribute/: array.rs  mod.rs  special.rs
src/parser/binary/utils/: attribute_value.rs  mod.rs
