[package]
name = "fbxcel"
version = "0.0.2"
authors = ["Takuma YOSHIOKA <tashioka.256@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Excellent FBX loader"

documentation = "https://docs.rs/fbxcel"
homepage = "https://github.com/l1048576/fbxcel"
repository = "https://github.com/l1048576/fbxcel"

[features]
default = ["libflate"]

[dependencies]
flate2 = { version = "^0.2.17", optional = true }
libflate = { version = "^0.1.2", optional = true }
log = "^0.3.6"
